--- a/CarFuel.Data/CarFuel.Data.csproj
+++ b/CarFuel.Data/CarFuel.Data.csproj
@@ -49,9 +49,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CarFuelDb.cs" />
+    <Compile Include="CarRepository.cs" />
     <Compile Include="IRepository_T.cs" />
-    <Compile Include="IRepoServiceBase_T.cs" />
+    <Compile Include="RepositoryBase_T.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResositoryBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CarFuel.Models\CarFuel.Models.csproj">
