--- a/CarFuel.web/Web.config
+++ b/CarFuel.web/Web.config
@@ -9,7 +9,14 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-CarFuel.web-25591110114450;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-CarFuel.web-25591110114450.mdf" providerName="System.Data.SqlClient" />
+  <!--  <add name="CarFuelC" 
+         connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-CarFuel.web-25591110114450;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-CarFuel.web-25591110114450.mdf" providerName="System.Data.SqlClient" />
+  -->
+    <add name="CarFuelDb"
+         providerName="System.Data.SqlClient"
+         connectionString="Data Source=SAMAISERTJE4C24;Database=CarFuelDb;
+                          user id=sa;password=sertjerm%123;MultipleActiveResultSets=true;"/>
+    <!--<add name="CarFuelDb" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SAMAISERTJE4C24;initial catalog=CarFuelDb;persist security info=True;user id=sa;password=sertjerm%123;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
