--- a/CarFuel.web/Web.config
+++ b/CarFuel.web/Web.config
@@ -16,6 +16,10 @@
          providerName="System.Data.SqlClient"
          connectionString="Data Source=SAMAISERTJE4C24;Database=CarFuelDb;
                           user id=sa;password=sertjerm%123;MultipleActiveResultSets=true;"/>
+    <add name="DefaultConnection"
+       providerName="System.Data.SqlClient"
+       connectionString="Data Source=SAMAISERTJE4C24;Database=MemberShipDb;
+                          user id=sa;password=sertjerm%123;MultipleActiveResultSets=true;"/>
     <!--<add name="CarFuelDb" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SAMAISERTJE4C24;initial catalog=CarFuelDb;persist security info=True;user id=sa;password=sertjerm%123;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
   <appSettings>
